philosophers are created, time is obtained

--- a/philo/Makefile
+++ b/philo/Makefile
@@ -6,7 +6,7 @@
 #    By: acroue <acroue@student.42.fr>              +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/11/11 11:51:52 by acroue            #+#    #+#              #
-#    Updated: 2024/04/23 17:47:39 by acroue           ###   ########.fr        #
+#    Updated: 2024/04/24 15:16:00 by acroue           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -32,6 +32,7 @@ OBJS_DIR = objs
 define SRC :=
 	main.c
 	philo_init.c
+	philo_utils.c
 endef
 SRC := $(strip $(SRC))
 
